# divvun-worker-speller

./: Cargo.toml  Dockerfile  Justfile  README.md
helm/divvun-worker-speller/: Chart.yaml  values.yaml
helm/divvun-worker-speller/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  pvc.yaml  service.yaml
src/: main.rs
