[package]
name = "divvun-worker-speller"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.4.18", features = ["derive"] }
divvunspell = { git = "https://github.com/divvun/divvunspell", version = "1.0.0-beta.5" }
#divvun-runtime = { version = "0.1.0", path = "../divvun-runtime", default-features = false, features = ["mod-speech"] }
poem = "3.0.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
subterm = { git = "https://github.com/bbqsrc/subterm", version = "0.0.1" }
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
